--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active bg-info border rounded p-5">
+                    <div class="carousel-item active bg-danger border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item bg-info border rounded p-5">
+                    <div class="carousel-item bg-danger border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item bg-info border rounded p-5">
+                    <div class="carousel-item bg-danger border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -118,6 +118,53 @@
                             <h1 class="text-white">Shoes</h1>
                             <img src="images/categories/shoes.png">
                         </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <section class="container my-5">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card h-100 border border-0 shadow-lg">
+                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Supply 350</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                    </div>
+                    <div class="card-footer border-0">
+                      <h5>$120</h5>
+                      <div class="btn btn-warning">Buy Now</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border border-0 shadow-lg">
+                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Nike 360
+                    </h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    </p>
+                    </div>
+                    <div class="card-footer border-0">
+                        <h5>$320</h5>
+                        <div class="btn btn-warning">Buy Now</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border border-0 shadow-lg">
+                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Airmax
+                    </h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                    </div>
+                    <div class="card-footer border-0">
+                        <h5>$350</h5>
+                        <div class="btn btn-warning">Buy Now</div>
                     </div>
                   </div>
                 </div>
