--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </div>
               </div>
         </section>
-        <section style="height:300px; width:1112px;" class="container d-flex align-items-center rounded-1 justify-content-center panda-panda-bg-info" id="subscribe">
+        <section style="height:300px; width:1112px;" class="container d-flex align-items-center rounded-1 justify-content-center panda-bg-danger" id="subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
